--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -271,7 +271,8 @@
     /*background-color: royalblue;*/
     background-color: white;
     width: 90vw;
-    height: 8.8rem;;
+    height: 8.8rem;
+    ;
     border-radius: 1rem;
   }
 
