--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -242,7 +242,6 @@
     margin-top: 2.5rem;
     padding: 0 1.5rem;
     width: 100vw;
-    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -271,8 +270,8 @@
     /*background-color: royalblue;*/
     background-color: white;
     width: 90vw;
-    height: 8.8rem;
-    ;
+    /*height: 8.8rem;*/
+    margin-bottom: 1rem;
     border-radius: 1rem;
   }
 
@@ -295,10 +294,17 @@
   }
 
   .starPopular {
-    padding-top: 2rem;
+    /*background-color: aqua;*/
+    height: 3.5rem;
+    display: flex;
+    align-items: flex-end;
   }
 
-  .fa-star {
+  .starPopular .fa-star {
     font-size: 0.9rem;
     color: #0065FC;
+  }
+
+  .starPopular .greyStar {
+    color: #F2F2F2;
   }
