--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -237,74 +237,55 @@
 
   /*MOST POPULAR*/
 
-  #mostPopular {
-    background-color: #F2F2F2;
-    margin-top: 2.5rem;
+  .mostPopular {
     padding: 0 1.5rem;
-    width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-  }
+    background-color: #F2F2F2;
+}
 
-  #mostPopular header {
+.mostPopular header {
     display: flex;
-    padding: 2rem 0;
-  }
+    justify-content: space-between;
+}
 
-  #wrapperIcone {
-    /*background-color: red;*/
-    flex-grow: 1;
+p {
+    /*width: 100vw;*/
+}
+
+.fa-chart-line {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
+    align-self: center;
+}
 
-  #wrapperIcone i {
-    /*background-color: royalblue;*/
-    font-size: 1.7rem;
-  }
-
-  #mostPopular figure {
-    display: flex;
-    /*background-color: royalblue;*/
+.mostPopular figure {
     background-color: white;
-    width: 90vw;
-    /*height: 8.8rem;*/
-    margin-bottom: 1rem;
-    border-radius: 1rem;
-  }
-
-  .imgPopular {
-    width: 9.5rem;
-    height: 8.5rem;
-    border-radius: 1rem 0 0 1rem;
-    padding-top: 0.3rem;
-    padding-left: 0.3rem;
-  }
-
-  .hostelInfo {
-    padding: 1rem 1.5rem;
-  }
-
-  figcaption {
-    font-weight: 600;
-    font-size: 1.2rem;
-    padding-bottom: 1rem;
-  }
-
-  .starPopular {
-    /*background-color: aqua;*/
-    height: 3.5rem;
     display: flex;
-    align-items: flex-end;
-  }
+    margin: 0;
+    margin-bottom: 0.9rem;
+    border-radius: 1rem;
+}
 
-  .starPopular .fa-star {
-    font-size: 0.9rem;
-    color: #0065FC;
-  }
+.imgPopular {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 1rem 0 0 1rem;
+    padding: 0.5rem 0 0.5rem 0.5rem;
+}
 
-  .starPopular .greyStar {
-    color: #F2F2F2;
-  }
+.wrapperFig {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    justify-content: space-between;
+
+}
+
+.fa-star {
+   color: blue;
+   font-size: 0.8rem;
+}
+
+figcaption {
+    font-weight: bold;
+}
