--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -66,7 +66,17 @@
           width: 5vw;
           padding: 1rem 0rem 0 0;
       }
-    }
+
       /*MOST POPULAR*/
 
-  
+      .mostPopular {
+          max-width: 30rem;
+          border-radius: 1rem;
+      }
+
+      #hostingSection {
+          display: flex;
+          justify-content: flex-end;
+          padding-right: 1rem;
+      }
+    }
