--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -21,6 +21,7 @@
 
      a {
         text-decoration: none;
+        color: black;
     }
 
     .navUn {
@@ -259,10 +260,8 @@
 
       #figurePopular img {
         width: 10rem;
-        min-width: 10rem;
-        height: 10rem;
-        margin-top: 0.5rem;
-        margin-left: 0.5rem;
+        object-fit: cover;
+        margin: 0.5rem 0 0.5rem 0.5rem;
         border-radius: 1rem 0 0 1rem;
       }
 
@@ -272,6 +271,7 @@
         margin-bottom: 1rem;
         height: 11rem;
         border-radius: 1.5rem;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
       }
 
       .wrapperFigureInfo {
@@ -279,7 +279,7 @@
         flex-direction: column;
       }
 
-      .wrapperFigureInfo figcaption {
+      .wrapperFigureInfo span {
         padding-bottom: 0.5rem;
         font-weight: bold;
       }
