--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -345,8 +345,48 @@
       }
 
       #hostingSection p:last-child {
-        margin: 1rem 0;
+        margin-top: 1rem;
         font-weight: bold;
         font-size: 1.2rem;
+      }
+
+      /* activitySection */
+
+      #activitySection {
+        padding: 2rem 1.5rem;
+      }
+
+      #activitySection header {
+        padding-bottom: 2rem;
+      }
+
+      #figureActivity {
+        display: flex;
+        flex-direction: column;
+      }
+
+      #figureActivity figure {
+        display: flex;
+        flex-direction: column;
+        height: 14rem;
+        border-radius: 1rem;
+        box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+        margin-bottom: 1.5rem;
+      }
+
+      #figureActivity img {
+        height: 70%;
+        object-fit: cover;
+        border-radius: 1rem 1rem 0 0;
+      }
+
+      #figureActivity figcaption {
+        height: 30%;
+        display: flex;
+        flex-direction:column;
+        justify-content: center;
+        padding-left: 1.5rem;
+        font-weight: bold;
+        font-size: 1.1rem;
       }
 }
