--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,10 +1,11 @@
-/* Appareils avec une résolution de 768 pixels ou moins */
+/* Appareils avec une résolution de 767 pixels ou moins */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
 
     /*headerSection*/
 
     header ul {
+        background-color: aqua;
         display: flex;
         flex-wrap: wrap;
         list-style: none;
@@ -93,7 +94,7 @@
     #searchSection p {
         padding-top: 1rem;
         padding-bottom: 2rem;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
  
     #searchBar {
@@ -417,5 +418,4 @@
       #footerSection li {
         padding-bottom: 1rem;
       }
-
-}
+  
