--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -310,7 +310,7 @@
 
       #hostingSection {
         padding: 2.5rem 1.5rem;
-        width: 60%;
+        width: 66%;
         background-color: #F2F2F2;
         border-radius: 1rem;
       }
@@ -337,7 +337,7 @@
         height: 14rem;
         border-radius: 1rem;
         box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
         background-color: white;
       }
 
@@ -423,7 +423,9 @@
 
       #footerSection nav {
         display: flex;
-        flex-direction: column;
+        /*flex-direction: column;*/
+        width: 70%;
+        justify-content: space-between;
       }
 
       #footerSection h3 {
