--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,5 +1,3 @@
-/* Appareils avec une résolution de 767 pixels ou moins */
-
 @media only screen and (max-width: 767px) {
 
     /*headerSection*/
@@ -419,3 +417,5 @@
         padding-bottom: 1rem;
       }
   
+    }
+    
