--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -393,7 +393,7 @@
 
       #footerSection {
         background-color: #F2F2F2;
-        padding: 2.5rem 1.5rem 0;
+        padding: 2.5rem 1.5rem;
       }
 
       #footerSection nav {
@@ -407,10 +407,6 @@
 
       #footerSection ul {
         list-style: none;
-        display: flex;
-        flex-direction: column;
-        height: 7rem;
-        justify-content: center;
       }
 
       #footerSection li {
