--- a/assets/css/tablette.css
+++ b/assets/css/tablette.css
@@ -389,16 +389,18 @@
         font-size: 1.1rem;
       }
 
-      /* footerSection*/
+      /*footerSection*/
 
       #footerSection {
         background-color: #F2F2F2;
-        padding: 2.5rem 1.5rem;
+        padding: 2.5rem 2rem;
       }
 
       #footerSection nav {
         display: flex;
-        flex-direction: column;
+        /*flex-direction: column;*/
+        width: 100%;
+        justify-content: space-between;
       }
 
       #footerSection h3 {
