--- a/assets/css/tablette.css
+++ b/assets/css/tablette.css
@@ -304,15 +304,26 @@
 
       #hostingSection {
         padding: 2.5rem 1.5rem;
+        /*margin-right: 0.5rem;*/
+        background-color: #F2F2F2;
+        /*border-radius: 1rem;*/
       }
 
       #hostingSection header {
         padding-bottom: 2rem;
+        padding-left: 1.2rem;
       }
 
       #figureHosting {
         display: flex;
-        flex-direction: column;
+        /*flex-direction: column;*/
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-around;
+      }
+
+      #figureHosting a {
+        width: 30%;
       }
 
       #figureHosting figure {
@@ -321,7 +332,8 @@
         height: 14rem;
         border-radius: 1rem;
         box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
+        background-color: white;
       }
 
       #figureHosting img {
@@ -347,6 +359,7 @@
         margin-top: 1rem;
         font-weight: bold;
         font-size: 1.2rem;
+        padding-left: 1.2rem;
       }
 
       /* activitySection */
@@ -412,7 +425,6 @@
         display: flex;
         flex-direction: column;
         height: 7rem;
-        justify-content: center;
       }
 
       #footerSection li {
