--- a/assets/css/tablette.css
+++ b/assets/css/tablette.css
@@ -311,7 +311,6 @@
 
       #hostingSection header {
         padding-bottom: 2rem;
-        padding-left: 1.2rem;
       }
 
       #figureHosting {
@@ -319,7 +318,7 @@
         /*flex-direction: column;*/
         flex-wrap: wrap;
         width: 100%;
-        justify-content: space-around;
+        justify-content: space-between;
       }
 
       #figureHosting a {
@@ -359,7 +358,6 @@
         margin-top: 1rem;
         font-weight: bold;
         font-size: 1.2rem;
-        padding-left: 1.2rem;
       }
 
       /* activitySection */
