--- a/assets/css/tablette.css
+++ b/assets/css/tablette.css
@@ -410,8 +410,12 @@
       #footerSection nav {
         display: flex;
         /*flex-direction: column;*/
-        width: 100%;
+        width: 70%;
         justify-content: space-between;
+      }
+
+      #footerSection nav div {
+        padding-right: 1rem;
       }
 
       #footerSection h3 {
